--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "license": "MIT",
     "type": "module",
     "scripts": {
+        "postinstall": "deno types > deno.d.ts",
         "build": "tsc",
         "test": "c8 ava",
         "lint": "eslint scripts tests"
